Added a Register section to the extension

--- a/popup.html
+++ b/popup.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="/css/popup.css">
 </head>
 <body>
-  <div id="wrapper">
+  <div class="wrapper">
     <!-- EXTENSION POPUP HEADER -->
-    <div id="header">
+    <div class="header">
       <h1>Sibyl <span class="subtext">The Web API for Forms</span></h1>
       <h2 class="alert subhead">v.0.3-alpha</h2>
     </div>
@@ -19,9 +20,9 @@
       <h1>Actions <span class="subtext">What would you like to do?</span></h1>
       <!-- ACTION CARDS -->
       <!-- Register -->
-      <div class="cards login">
+      <div class="cards register">
         <div class="cardholder">
-          <a href="#" rel="noopener" target="_blank" class="card">
+          <a href="/register.html" rel="noopener" target="_parent" class="card">
             <div class="card-container">
               <div class="card-title">Register</div>
             </div>
@@ -30,9 +31,9 @@
       </div>
 
       <!-- Sign In -->
-      <div class="cards generateForm">
+      <div class="cards login">
         <div class="cardholder">
-          <a href="#" rel="noopener" target="_blank" class="card">
+          <a href="#" rel="noopener" target="_parent" class="card">
             <div class="card-container">
               <div class="card-title">Sign In</div>
             </div>
