Added Options page

--- a/popup.html
+++ b/popup.html
@@ -56,9 +56,12 @@
 
     <!-- EXTENSION POPUP FOOTER -->
     <div id="footer">
-      <span class="footer--text">Project Sibyl S2 - A Thesis Work in Progress</span>
+      <span class="footer--text">Project Sibyl S2 - A Thesis Work in Progress | </span>
+      <a href="#" id="link--options-page" class="footer--text">Developer Options</a>
     </div>
     <!-- END EXTENSION POPUP HEADER -->
   </div>
+
+  <script src="/js/behaviors.js"></script>
 </body>
 </html>
