--- a/popup.html
+++ b/popup.html
@@ -31,7 +31,7 @@
       </div>
 
       <!-- Sign In -->
-      <div class="cards login">
+      <!-- <div class="cards login">
         <div class="cardholder">
           <a href="#" rel="noopener" target="_parent" class="card">
             <div class="card-container">
@@ -39,7 +39,7 @@
             </div>
           </a>
         </div>
-      </div>
+      </div> -->
 
       <!-- Generate Form -->
       <div class="cards generateForm">
