--- a/options.html
+++ b/options.html
@@ -39,7 +39,7 @@
           <!-- http://marknolledo.pythonanywhere.com/sibyl/analyze/mode=lexicon -->
           <div class="content--option-container">
             <h1 class="content--option-header">Naive Bayes Classifier</h1>
-            <form action="http://marknolledo.pythonanywhere.com/sibyl/analyze/mode=lexicon" method="POST" id="form-classify-single" name="form-classify-single" class="dev-form">
+            <form action="http://marknolledo.pythonanywhere.com/sibyl/analyze/mode=classifier" method="POST" id="form-classify-single" name="form-classify-single" class="dev-form">
               <label>Enter text</label><br/>
               <textarea id="classify-comment" name="classify-comment" form="form-classify-single" maxlength="100" cols="55" rows="10"></textarea><br/>
               <input type="submit" id="submit--classify-single" name="submit--classify-single" class="submit-button" value="Submit for Classifier Analysis">
@@ -73,6 +73,14 @@
     </div>
   </div>
 
+  <!-- TOAST MESSAGE -->
+  <div id="toast--parent-container">
+    <div id="toast--inner-container">
+      <span>Process running. Please wait.</span>
+    </div>
+  </div>
+
+  <!-- BEHAVIOR SCRIPTS -->
   <script src="/js/test-analysis-ajax.js"></script>
 </body>
 </html>
