Updated builder and popup scripts

--- a/builder.html
+++ b/builder.html
@@ -48,7 +48,7 @@
       <button class="btn btn-default edit-form render-controls">Edit</button>
       <button class="btn btn-default export-html render-controls">Export HTML</button>
       <button class="btn btn-default copy-html render-controls">Copy HTML</button>
-      <button class="btn btn-default view-xml render-controls">View XML</button>
+      <button class="btn btn-default view-js render-controls">View JS Object</button>
       <span class="toast--message">Toast message goes here.</span>
       <div id="build-html-viewer">
         <h1 class="builder--header">Form HTML</h1>
