--- a/popup.html
+++ b/popup.html
@@ -10,36 +10,30 @@
   <div class="wrapper">
     <!-- EXTENSION POPUP HEADER -->
     <div class="header">
-      <h1>Sibyl <span class="subtext">The Web API for Forms</span></h1>
-      <h2 class="alert subhead">v.0.3-alpha</h2>
+      <h1>Sibyl</h1>
+      <span class="subtext">The Web API for Forms</span>
+      <h2 class="alert subhead">v.1.0</h2>
     </div>
     <!-- END EXTENSION POPUP HEADER -->
 
     <!-- EXTENSION POPUP ACTIONS -->
     <div id="actions">
-      <h1>Actions <span class="subtext">What would you like to do?</span></h1>
       <!-- ACTION CARDS -->
       <!-- Generate Form -->
-      <div class="cards generateForm">
-        <div class="cardholder">
-          <a href="/builder.html" rel="noopener" target="_blank" class="card">
-            <div class="card-container">
-              <div class="card-title">Create a Form</div>
-            </div>
-          </a>
-        </div>
-      </div>
+      <button id="open--analysis" class="popup--btn">Form Analysis</button>
+      <button id="open--formbuilder" class="popup--btn">Form Builder</button>
     </div>
     <!-- END EXTENSION POPUP ACTIONS -->
 
     <!-- EXTENSION POPUP FOOTER -->
     <div id="footer">
-      <span class="footer--text">Project Sibyl S2 - A Thesis Work in Progress | </span>
+      <span class="footer--text">Sibyl S2 - A Thesis Work in Progress</span>
       <a href="#" id="link--options-page" class="footer--text">Developer Options</a>
     </div>
     <!-- END EXTENSION POPUP HEADER -->
   </div>
 
-  <script src="/js/behaviors.js"></script>
+  <!-- ATTACHED SCRIPTS -->
+  <script src="/js/client.js"></script>
 </body>
 </html>
