--- a/options.html
+++ b/options.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
   <title>Developer Options - Sibyl</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="/css/options.css">
@@ -79,6 +81,9 @@
       <span>Process running. Please wait.</span>
     </div>
   </div>
+
+  <!-- PAGE BACKGROUND -->
+  <div id="page--splitter-background"></div>
 
   <!-- BEHAVIOR SCRIPTS -->
   <script src="/js/test-analysis-ajax.js"></script>
