--- a/analysis.html
+++ b/analysis.html
@@ -43,23 +43,41 @@
                 <td>Form ID</td>
                 <td>Response Count</td>
                 <td>Column Count</td>
+                <td>Filter</td>
+                <td>View</td>
               </tr>
 
               <tr id="statistics--value-containers">
                 <td id="statistics--table-id">0</td>
                 <td id="statistics--response-counter">0</td>
                 <td id="statistics--column-counter">0</td>
+                <td><select id="recent-entries--data-switch" name="recent-entries--data-switch"></select></td>
+                <td>
+                  <select id="recent-entries--count-switch" name="recent-entries--count-switch">
+                    <option value="all">All</option>
+                    <option value="10">10</option>
+                    <option value="50">50</option>
+                    <option value="100">100</option>
+                  </select>
+                </td>
               </tr>
             </table>
           </div>
 
-          <!-- RECENT COMMENTS -->
+          <!-- ENTRIES -->
           <div id="analysis--recent-entries-container">
-            <div id="recent-entries--header">
-              <h2>Recent Entries</h2>
-              <select id="recent-entries--data-switch" name="recent-entries--data-switch"></select>
+            <!-- RESPONSE FULL VIEW -->
+            <div id="recents--full-container">
+              <div id="recents--assist-container" class="recents--child-container">
+              </div>
             </div>
-            <table id="analysis--recent-entries"></table>
+
+            <!-- RESPONSE FILTERED VIEW -->
+            <div id="recents--filtered-container">
+              <table id="analysis--recent-entries"></table>
+            </div>
+
+            <!-- SENTIMENT CLASSIFIER -->
             <div id="recent-entries--classifier-parent-container">
               <h2>Sentiment Classifier</h2>
               <div class="warn-set">
