Added handler for statistical data returned by the API
Various modifications and adjustments
Revision bump to 3

--- a/analysis.html
+++ b/analysis.html
@@ -29,7 +29,6 @@
         </form>
         <div class="notice-group">
           <span class="regular">Forgot your ID? Try looking for the HTML file the form builder made for you before; the number is the form ID.</span>
-          <a href="#" id="classifier-result-trigger">Show me</a>
         </div>
       </div>
 
@@ -45,7 +44,7 @@
                 <td>Response Count</td>
                 <td>Response Fields</td>
                 <td>Filter</td>
-                <td>View</td>
+                <!-- <td>View</td> -->
               </tr>
 
               <tr id="statistics--value-containers">
@@ -53,10 +52,10 @@
                 <td id="statistics--response-counter">0</td>
                 <td id="statistics--column-counter">0</td>
                 <td><select id="recent-entries--data-switch" name="recent-entries--data-switch"></select></td>
-                <td>
+                <!-- <td>
                   <select id="recent-entries--count-switch" name="recent-entries--count-switch">
                   </select>
-                </td>
+                </td> -->
               </tr>
             </table>
           </div>
