--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
     <div class="header">
       <h1>Sibyl</h1>
       <span class="subtext">The Web API for Forms</span>
-      <h2 class="alert subhead">v.1.0</h2>
+      <h2 class="alert subhead">v.1.0 rev. 3</h2>
     </div>
     <!-- END EXTENSION POPUP HEADER -->
 
